[tool.poetry]
name = "clearboundary"
version = "0.1.0"
description = "Remove noise artifacts from boundry detection results."
authors = ["Yuchong Zhang, Thomas Snow"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
torchvision = "^0.20.1"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
wandb = "^0.18.6"
tqdm = "^4.67.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
